--- a/05-Guess-The-Number-Project#1/index.html
+++ b/05-Guess-The-Number-Project#1/index.html
@@ -29,6 +29,7 @@
         <p class="label-highscore">
           Highscore: <span class="highscore">0</span>
         </p>
+        <button class="btn howto">How to play?</button>
       </section>
     </main>
     <script src="script.js"></script>
