--- a/09-Data-Structures-Operators/index.html
+++ b/09-Data-Structures-Operators/index.html
@@ -10,7 +10,7 @@
         height: 100vh;
         display: flex;
         align-items: center;
-        background: linear-gradient(to top left, #28b487, #7dd56f);
+        background: linear-gradient(to top left, #28b487, #d2d56f);
       }
       h1 {
         font-family: sans-serif;
